2007-08-27  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* configure.ac: Don't add -std=c9x CFLAG on Solaris.  Fixes
	#339924 again.

	* gobject/pygtype.c (pyg_type_wrapper_repr): Typecast self->type
	to (unsigned long int) to fix a compilation warning.

2007-08-14   Ed Catmur   <ed@catmur.co.uk>

	reviewed by: Gustavo J. A. M. Carneiro

	* gobject/pygobject.c (pygobject_new_full, pygobject_clear),
	(pygobject_get_dict): Bug 466082 – pygobject_new_full not fully
	initialising PyGObject, chaos results.

2007-08-13  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* tests/test_subtype.py (TestSubType.testGetDict): Add unit test
	exercising a bug when GObject.__dict__ is accessed directly.

2007-07-08  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/gobjectmodule.c (pygobject_functions)
	(pyg_timeout_add_seconds): Wrap g_timeout_add_seconds,
	conditionally compiled if glib version >= 2.13.5.

2007-07-08   Johannes Hölzl   <johannes.hoelzl@gmx.de>

	reviewed by: Gustavo Carneiro

	* gobject/gobjectmodule.c (build_gerror, init_gobject): Work
	around the deprecation warning of BaseException.message in Python
	2.6+ affecting GError exceptions.  Fixes #342948.

2007-07-07  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* configure.ac: Post-release version bump.

=== 2.13.2 ===
2007-07-07  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* NEWS: Update.

2007-07-07  Damien Carbery   <damien.carbery@sun.com>

	reviewed by: Gustavo Carneiro.

	* configure.ac: Bug 339924 – pygobject doesn't compile on opensolaris.

2007-04-30  Johannes Hölzl  <johannes.hoelzl@gmx.de>

	* gobject/gobjectmodule.c (init_gobjectmodule),
	* gobject/pygoptiongroup.c (arg_func),
	* gobject/option.py (OptionParser._parse_args, OptionGroup._to_goptiongroup),
	* tests/test_option.py: OptParse-Exceptions in GOption-callbacks
	are now convertet into an GError.  GError from the
	GOptionGroup.run is convertet into an OptParse-Exception.
	Fixes #342948.

2007-07-06  Ed Catmur  <ed@catmur.co.uk>
