@@ -1,6 +1,6 @@
 AUTOMAKE_OPTIONS = 1.7
 PLATFORM_VERSION = 2.0
-INCLUDES = $(PYTHON_INCLUDES) $(GLIB_CFLAGS) -DPY_SSIZE_T_CLEAN -D_XOPEN_SOURCE=600 -D__EXTENSIONS__
+INCLUDES = $(PYTHON_INCLUDES) $(GLIB_CFLAGS) -DPY_SSIZE_T_CLEAN
 
 pkgincludedir = $(includedir)/pygtk-$(PLATFORM_VERSION)
 pkginclude_HEADERS = pygobject.h
